traefik-public/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-system
spec:
  externalTrafficPolicy: Local
  loadBalancerClass: tailscale
  selector:
    app: traefik
  ports:
    - port: 80
      protocol: TCP
      name: http
    # - port: 443
    #   protocol: TCP
    #   name: https
    # - port: 9000
    #   protocol: TCP
    #   name: dashboard
    # - port: 2049
    #   protocol: TCP
    #   name: nfs
    # - port: 445
    #   protocol: TCP
    #   name: smb
  type: LoadBalancer
