traefik-public/ingress-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik-public

spec:
  selector:
    app: traefik
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: dashboard

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-public
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`)
      # match: Host(`traefik-dashboard-public.tsebra-home.de`)
      services:
        - name: traefik-dashboard
          port: 8080
  # tls:
  #   certResolver: default
